--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -25,6 +25,7 @@ body
 			height: 152px
 			width: 100%
 			padding-top: 25px
+			z-index: 100000
 			flex-direction: column
 			background-color: rgba(255,255,255,0.8)
 			.wrapper_header
@@ -170,7 +171,7 @@ body
 	.main-content
 		height: 500px
 		// width: 1024px
-		padding: 0 15px 
+		// padding: 0 15px 
 		display: block
 		margin: auto
 		background: grey
@@ -204,6 +205,10 @@ body
 	align-items: center
 	justify-content: center
 	transition: 222ms ease
+	border-right: 1px solid #e6e6e6
+	&:last-child
+		border-right: none
+
 
 
 /* The dropdown container */
@@ -227,6 +232,7 @@ body
 	width: 100%
 	height: 100%
 	transition: 222ms ease
+	border-right: 1px solid #e6e6e6
 	&:hover
 		cursor: pointer
 
@@ -267,3 +273,7 @@ body
 .dropdown:hover .dropdown-content 
 	display: block
 	transition: 222ms ease
+
+.slidetitle
+	img
+		width: 100%
