--- a/app/libs/slider/prrple.slider.css
+++ b/app/libs/slider/prrple.slider.css
@@ -7,7 +7,7 @@
 /* MAIN */
 
 .slider{
-	display:block;
+	/* display:block; */
 	position:relative;
 	width:100%;
 	height:600px;
@@ -98,7 +98,7 @@
 	display:block;
 	position:absolute;
 	width:100%;
-	bottom:20px;
+	bottom:40px;
 	left:0;
 	font-size:0;
 	line-height:0;
